change the card layout

--- a/src/components/product-card/product-card.module.scss
+++ b/src/components/product-card/product-card.module.scss
@@ -1,7 +1,9 @@
 @import '@styles/theme.module.scss';
 
 .root {
-    cursor: pointer;
+        cursor: pointer;
+    height: auto;
+    display: grid;
 }
 
 .cardContent {
