--- a/src/styles/common/style-guide.css
+++ b/src/styles/common/style-guide.css
@@ -122,11 +122,15 @@
 }
 
 .shadow100 {
-  box-shadow: 0px 4px 12px -4px rgba(22, 34, 51, 0.12), 0px 16px 32px 0px rgba(22, 34, 51, 0.16);
+  box-shadow:
+    0px 4px 12px -4px rgba(22, 34, 51, 0.12),
+    0px 16px 32px 0px rgba(22, 34, 51, 0.16);
 }
 
 .shadow200 {
-  box-shadow: 0px 4px 8px -4px rgba(22, 34, 51, 0.08), 0px 16px 24px 0px rgba(22, 34, 51, 0.08);
+  box-shadow:
+    0px 4px 8px -4px rgba(22, 34, 51, 0.08),
+    0px 16px 24px 0px rgba(22, 34, 51, 0.08);
 }
 
 .shadow300 {
@@ -194,4 +198,8 @@
 }
 .margin40 {
   margin: var(--size40);
+}
+.border {
+      border: 1px solid #cacaca;
+
 }
