delete old board and fix new board

--- a/src/_codux/boards/documentation/style-guide.board.module.scss
+++ b/src/_codux/boards/documentation/style-guide.board.module.scss
@@ -39,6 +39,7 @@
     font-size: 23px;
     line-height: 0;
     column-gap: 12px;
+    align-items: center;
 }
 .SectionSubtitle {
     padding-left: 47px;
