--- a/src/pages/products-page/products-page.module.scss
+++ b/src/pages/products-page/products-page.module.scss
@@ -1,8 +1,7 @@
 @import '@styles/theme.module.scss';
 
 .root {
-    padding-right: 30px;
-    padding-left: 30px;
+    padding: 30px;
 }
 
 .title {
