--- a/src/pages/products-page/products-page.module.scss
+++ b/src/pages/products-page/products-page.module.scss
@@ -1,7 +1,7 @@
 @import '@styles/theme.module.scss';
 
 .root {
-    padding-top: 20px;
+    padding: 30px;
 }
 
 .title {
@@ -11,45 +11,26 @@
     margin-bottom: 60px;
 }
 
-.gallery {
-    display: grid;
-    grid-auto-flow: row;
-    grid-template-columns: 1fr 1fr 1fr;
-    margin-right: 120px;
-    margin-left: 120px;
-    column-gap: 20px;
-    row-gap: 60px;
-    margin-top: 30px;
-    margin-bottom: 60px;
-}
-
 .productCard {
     width: 100%;
     height: 100%;
 }
 
-@media (1400px < width) {
-    .gallery {
-        grid-template-columns: 1fr 1fr 1fr 1fr;
-        max-width: 1400px;
-        margin-left: auto;
-        margin-right: auto;
+.lesson {
+    border-bottom: 1px solid #d2d2d2;
+
+    &:first-child {
+        border-top: 1px solid #d2d2d2;
     }
 }
 
-@media (430px <=width) and (width < 980px) {
-    .gallery {
-        grid-template-columns: 1fr 1fr;
-        margin-right: 80px;
-        margin-left: 80px;
-    }
-}
+@media (width <= 768px) {
+    .lesson {
+        border: 0;
 
-@media (width < 430px) {
-    .gallery {
-        grid-template-columns: 1fr;
-        margin-left: 60px;
-        margin-right: 60px;
+        &:first-child {
+            border-top: 0;
+        }
     }
 
     .title {
