change the hero image layout

--- a/src/pages/home-page/hero-image/hero-image.module.scss
+++ b/src/pages/home-page/hero-image/hero-image.module.scss
@@ -1,18 +1,18 @@
 @import '@styles/theme.module.scss';
 
 .root {
-    position: relative;
     color: $white;
+    display: flex;
 }
 
 .overlay {
-    position: absolute;
     background-color: transparent;
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
     padding-left: 5vw;
+    background: $black;
 }
 
 .image {
