--- a/src/styles/theme.module.scss
+++ b/src/styles/theme.module.scss
@@ -3,6 +3,7 @@ $white: #ffffff;
 $black: #000000;
 $charcoal-black: #282b2d;
 $snow-white: #f5f5f5;
+$p1: #874ccc;
 
 //fonts
 $my-prettyfont: 'DM Sans', sans-serif;
