feat: change to dark theme

--- a/src/components/tabs/tabs.module.scss
+++ b/src/components/tabs/tabs.module.scss
@@ -17,10 +17,10 @@
     color: $light-gray;
 
     &:hover {
-        color: $black;
+        color: $white;
     }
 }
 
 .active {
-    color: $black;
+    color: $white;
 }
