--- a/src/styles/index.module.scss
+++ b/src/styles/index.module.scss
@@ -1,8 +1,12 @@
 @import './reset.css';
+@import './theme.module.scss';
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100;0,9..40,200;0,9..40,300;0,9..40,400;0,9..40,500;0,9..40,600;0,9..40,700;0,9..40,800;0,9..40,900;0,9..40,1000;1,9..40,100;1,9..40,200;1,9..40,300;1,9..40,400;1,9..40,500;1,9..40,600;1,9..40,700;1,9..40,800;1,9..40,900;1,9..40,1000&display=swap');
 
 :root {
-    font-family: 'DM Sans', sans-serif;
+    color-scheme: dark;
+    color: $snow-white;
+    background-color: $charcoal-black;
+    font-family: $my-prettyfont;
     line-height: 1.5;
     font-weight: 400;
     font-synthesis: none;
