--- a/src/components/dropdown-menu/dropdown-menu.module.scss
+++ b/src/components/dropdown-menu/dropdown-menu.module.scss
@@ -21,10 +21,10 @@
     flex-direction: column;
     align-items: end;
     position: absolute;
-    background-color: #fff;
+    background-color: $snow-white;
     margin-top: 5px;
     border-radius: 3px;
-    border: 1px solid #d2d2d2;
+    border: 1px solid $light-gray;
 }
 
 .menu-item {
