--- a/src/pages/lessons-page/lessons-page.module.scss
+++ b/src/pages/lessons-page/lessons-page.module.scss
@@ -17,10 +17,10 @@
 }
 
 .lesson {
-    border-bottom: 1px solid #d2d2d2;
+    border-bottom: 1px solid $light-gray;
 
     &:first-child {
-        border-top: 1px solid #d2d2d2;
+        border-top: 1px solid $light-gray;
     }
 }
 
