fix: changed selected day styling

--- a/src/components/calendar/datepickerstyles.css
+++ b/src/components/calendar/datepickerstyles.css
@@ -2,10 +2,11 @@
   height: 35px;
   width: 35px;
   position: relative; /* Add this line */
+  border-radius: 50%;
 }
 
 .selected {
-  /* background-color: red; */
+  background-color: rgb(144, 178, 240);
 }
 
 .dayStyle:hover {
