SingleInput with Error Style

--- a/src/components/single-input/single-input.module.scss
+++ b/src/components/single-input/single-input.module.scss
@@ -10,3 +10,11 @@
     padding-left: 8px;
     height: 30px;
 }
+.errormessage {
+    color: #de1b1b;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+.inputError {
+    border: 1px solid #c42828;
+}
