--- a/src/styles/common-styles.module.scss
+++ b/src/styles/common-styles.module.scss
@@ -26,7 +26,7 @@
     height: 42px;
     padding-left: 22px;
     padding-right: 22px;
-    border: 1px solid $charcoal-black;
+    border: 1px solid $white;
     z-index: 1;
 
     &:hover {
