Add orange variable

--- a/src/_codux/boards/documentation/vars-classes.module.scss
+++ b/src/_codux/boards/documentation/vars-classes.module.scss
@@ -75,6 +75,10 @@
     background-color: $charcoal-black;
 }
 
+.orange {
+    background-color: $orange;
+}
+
 .b10 {
     background-color: var(--b10);
 }
