--- a/src/styles/common-styles.module.scss
+++ b/src/styles/common-styles.module.scss
@@ -34,6 +34,7 @@
         border: 1px solid $charcoal-black;
         color: $charcoal-black;
         cursor: pointer;
+        background: $orange;
     }
 }
 
