added cover title

--- a/src/_codux/boards/documentation/vars-classes.module.scss
+++ b/src/_codux/boards/documentation/vars-classes.module.scss
@@ -15,6 +15,10 @@
     font: $extra-large-thin-title;
 }
 
+.extra-large-bold-title {
+    font: $extra-large-bold-title;
+}
+
 .large-title-mobile {
     font: $large-title-mobile;
 }
