--- a/src/styles/theme.module.scss
+++ b/src/styles/theme.module.scss
@@ -5,7 +5,7 @@ $charcoal-black: #282b2d;
 $snow-white: #f5f5f5;
 $light-gray: #bebbbb;
 $gray: #808080;
-$p1: #874ccc;
+$orange: #ff5e1a;
 
 //fonts
 $my-prettyfont: 'DM Sans', sans-serif;
