feat: add option to limit the amount of lessons shown

--- a/src/components/lessons-list/lessons-list.module.scss
+++ b/src/components/lessons-list/lessons-list.module.scss
@@ -11,6 +11,12 @@
     }
 }
 
+.all-lessons-button-container {
+    padding: 20px;
+    display: flex;
+    justify-content: center;
+}
+
 @media (width <= 768px) {
     .lesson {
         border: 0;
