change the hex for orange

--- a/src/styles/common-styles.module.scss
+++ b/src/styles/common-styles.module.scss
@@ -14,7 +14,8 @@
     }
 }
 
-.primaryButton, .secondaryButton {
+.primaryButton,
+.secondaryButton {
     display: flex;
     align-items: center;
     font: $small-text;
@@ -66,5 +67,5 @@
 }
 
 .p1 {
-    background-color: $p1;
+    background-color: $o1;
 }
