--- a/src/styles/theme.module.scss
+++ b/src/styles/theme.module.scss
@@ -6,7 +6,7 @@ $snow-white: #f5f5f5;
 $light-gray: #bebbbb;
 $gray: #808080;
 $p1: #874ccc;
-$o1: #ff5e1a;
+$o1: #FF5B2B;
 
 //fonts
 $my-prettyfont: 'DM Sans', sans-serif;
