--- a/src/_codux/boards/documentation/vars-classes.module.scss
+++ b/src/_codux/boards/documentation/vars-classes.module.scss
@@ -14,6 +14,9 @@
 .extra-large-thin-title {
     font: $extra-large-thin-title;
 }
+.extra-large-bold-title {
+    font: $extra-large-bold-title;
+}
 
 .large-title-mobile {
     font: $large-title-mobile;
