--- a/src/styles/theme.module.scss
+++ b/src/styles/theme.module.scss
@@ -14,6 +14,7 @@ $my-prettyfont: 'DM Sans', sans-serif;
 //titles
 $extra-large-thin-title: 100 65px/1.2 $my-prettyfont;
 $large-thin-title: 100 45px/1.4 $my-prettyfont;
+$extra-large-bold-title: 1000 120px/1.4 $my-prettyfont;
 $large-title: 400 45px/1.4 $my-prettyfont;
 $large-title-mobile: 400 30px/1.4 $my-prettyfont;
 $medium-title: 300 20px/1.4 $my-prettyfont;
