--- a/src/styles/theme.module.scss
+++ b/src/styles/theme.module.scss
@@ -7,6 +7,17 @@ $light-gray: #bebbbb;
 $gray: #808080;
 $p1: #874ccc;
 
+// theme colors
+$white: #ffffff;
+$dirty-white: #dcd9bf;
+$snow-white: #f5f5f5;
+$black: #000000;
+$charcoal-black: #282b2d;
+
+
+$hot-red: #ff2f2f;
+$orange-red: #ff5b2b;
+
 //fonts
 $my-prettyfont: 'DM Sans', sans-serif;
 
