--- a/src/styles/theme.module.scss
+++ b/src/styles/theme.module.scss
@@ -3,9 +3,9 @@ $white: #ffffff;
 $black: #000000;
 $charcoal-black: #282b2d;
 $snow-white: #f5f5f5;
-$light-gray: #bebbbb;
-$gray: #808080;
-$o1: #FF5B2B;
+$hot-red: #ff2f2f
+$orange-red: #ff5b2b
+
 
 //fonts
 $my-prettyfont: 'DM Sans', sans-serif;
