--- a/src/pages/home-page/hero-image/hero-image.module.scss
+++ b/src/pages/home-page/hero-image/hero-image.module.scss
@@ -10,7 +10,9 @@
     bottom: 0;
     left: 0;
     right: 0;
-    padding-left: 5vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .image {
@@ -27,12 +29,7 @@
 }
 
 .big-title {
-    max-width: 80%;
-    font: $extra-large-thin-title;
-    line-height: 1.2;
-    font-size: 85px;
-    letter-spacing: 2px;
-    margin-top: 25px;
+    font: $extra-large-bold-title;
 }
 
 .overlay-button {
@@ -47,7 +44,7 @@
     }
 
     .big-title {
-        max-width: 70%;
+        font-size: 230px;
     }
 
     .overlay-button {
