--- a/src/components/calendar/datepickerstyles.css
+++ b/src/components/calendar/datepickerstyles.css
@@ -1,31 +1,25 @@
-.dayStyle {
-  height: 35px;
-  width: 35px;
-  position: relative; /* Add this line */
-  border-radius: 50%;
+.react-datepicker__day:hover {
+  background-color: inherit;
+  color: inherit;
 }
 
-.selected {
-  background-color: rgb(144, 178, 240);
+.react-datepicker__day--selected {
+  background-color: transparent;
+  color: black;
+}
+.react-datepicker__header {
+  background-color: black;
+  border: none;
+}
+.react-datepicker__current-month,
+.react-datepicker__day-name {
+    color: white;
 }
 
-.dayStyle:hover {
-  background-color: rgb(144, 216, 240);
-  border-radius: 50%;
+.react-datepicker__day--outside-month {
+  visibility: hidden;
 }
-
-.available:after {
-  content: '';
-  display: block;
-  width: 5px;
-  height: 5px;
-  background-color: blue;
-  border-radius: 50%;
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
-}
-
-.weekend {
-  color: red;
+.calendar {
+  background-color: black;
+  border: 0px;
 }
