--- a/src/pages/profile-page/profile-page.module.scss
+++ b/src/pages/profile-page/profile-page.module.scss
@@ -4,6 +4,7 @@
     align-items: center;
     align-content: center;
     justify-content: center;
+    padding: 20px;
 }
 
 .content {
@@ -15,4 +16,26 @@
 .fields-section {
     display: flex;
     flex-direction: row;
+    column-gap: 80px;
+    row-gap: 40px;
+    margin-bottom: 20px;
+}
+@media (width <= 768px) {
+    .fields-section {
+        flex-direction: column;
+        row-gap: 20px;
+    }
+}
+.profile-form {
+    display: flex;
+    flex-direction: column;
+}
+.profile-submit {
+    justify-content: center;
+    align-self: flex-end;
+}
+.profile-title {
+    font-size: 20px;
+    font-weight: 700;
+    margin-bottom: 20px;
 }
