--- a/src/pages/home-page/home-page.module.scss
+++ b/src/pages/home-page/home-page.module.scss
@@ -2,8 +2,6 @@
 
 .root {
     padding-bottom: 90px;
-    margin-right: 64px;
-    margin-left: 64px;
 }
 
 .top-label-highlighted {
@@ -33,7 +31,7 @@
 
 .hero-title {
     margin-top: 80px;
-    font: $extra-large-thin-title;
+    font: $large-paragraph;
     text-align: center;
 }
 
