--- a/src/styles/index.module.scss
+++ b/src/styles/index.module.scss
@@ -5,7 +5,7 @@
 :root {
     color-scheme: dark;
     color: $snow-white;
-    background-color: $charcoal-black;
+    background-color: $black;
     font-family: $my-prettyfont;
     line-height: 1.5;
     font-weight: 400;
