fix: homepage changes (#19)

--- a/src/pages/home-page/hero-image/hero-image.module.scss
+++ b/src/pages/home-page/hero-image/hero-image.module.scss
@@ -10,7 +10,9 @@
     bottom: 0;
     left: 0;
     right: 0;
-    padding-left: 5vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .image {
@@ -27,12 +29,9 @@
 }
 
 .big-title {
-    max-width: 80%;
-    font: $extra-large-thin-title;
-    line-height: 1.2;
-    font-size: 85px;
-    letter-spacing: 2px;
-    margin-top: 25px;
+    font: $extra-large-bold-title;
+    font-size: 11dvw;
+    text-align: center;
 }
 
 .overlay-button {
@@ -44,10 +43,6 @@
 @media (width >= $large-desktop) {
     .small-title {
         font-size: 42px;
-    }
-
-    .big-title {
-        max-width: 70%;
     }
 
     .overlay-button {
@@ -66,8 +61,7 @@
     }
 
     .big-title {
-        font-size: 50px;
-        margin-top: 11px;
+        font-size: 42px;
     }
 
     .overlay-button {
