--- a/src/pages/home-page/home-page.module.scss
+++ b/src/pages/home-page/home-page.module.scss
@@ -31,7 +31,7 @@
 
 .hero-title {
     margin-top: 80px;
-    font: $extra-large-thin-title;
+    font: $large-paragraph;
     text-align: center;
 }
 
