fix (home page): small layout changes and texts

--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -6,7 +6,8 @@
     align-items: center;
     height: 64px;
     font: $small-text;
-    padding: 0 20px;
+    padding-top: 0;
+    padding-bottom: 0;
 }
 
 .menu {
