updated theme file, and edited StyleGuide board

--- a/src/_codux/boards/documentation/style-guide.board.module.scss
+++ b/src/_codux/boards/documentation/style-guide.board.module.scss
@@ -157,3 +157,21 @@
     background-color: #ebeef5;
     width: 100%;
 }
+.hot-red {
+    background: $hot-red;
+}
+.orange-red {
+    background: $orange-red;
+}
+.orange-red-40 {
+    background: $orange-red-40;
+}
+.orange-red-10 {
+    background: rgba(255, 91, 43, 0.1);
+}
+.snow-white-10 {
+    background: $snow-white-10;
+}
+.snow-white-40 {
+    background: rgba(245, 245, 245, 0.4);
+}
