--- a/src/components/dropdown-menu/dropdown-menu.module.scss
+++ b/src/components/dropdown-menu/dropdown-menu.module.scss
@@ -24,13 +24,13 @@
     background-color: $charcoal-black;
     margin-top: 5px;
     border-radius: 3px;
-    border: 1px solid $light-gray;
+    border: 1px solid $snow-white-40;
 }
 
 .menu-item {
     padding: 10px 20px;
 
     &:hover {
-        color: $o1;
+        color: $orange-red;
     }
 }
