--- a/src/components/lesson-item/lesson-item.module.scss
+++ b/src/components/lesson-item/lesson-item.module.scss
@@ -24,7 +24,7 @@
         grid-auto-flow: column;
         grid-template-rows: 1fr 1fr 1fr;
         grid-template-columns: 1fr;
-        border: 1px solid $light-gray;
+        border: 1px solid $snow-white-40;
         margin: 5px;
     }
 
