--- a/src/pages/my-bookings-page/my-bookings-page.module.scss
+++ b/src/pages/my-bookings-page/my-bookings-page.module.scss
@@ -10,7 +10,7 @@
     align-items: center;
     justify-content: space-between;
     padding: 16px;
-    border-bottom: 1px solid $light-gray;
+    border-bottom: 1px solid $snow-white-40;
 }
 
 .date {
@@ -32,11 +32,11 @@
 }
 
 .date-month-short {
-    color: $gray;
+    color: $snow-white-10;
 }
 
 .full-date {
-    color: $gray;
+    color: $snow-white-10;
 }
 
 .title {
