--- a/src/components/lessons-list/lessons-list.module.scss
+++ b/src/components/lessons-list/lessons-list.module.scss
@@ -4,10 +4,10 @@
 }
 
 .lesson {
-    border-bottom: 1px solid $light-gray;
+    border-bottom: 1px solid $snow-white-40;
 
     &:first-child {
-        border-top: 1px solid $light-gray;
+        border-top: 1px solid $snow-white-40;
     }
 }
 
