--- a/src/components/tabs/tabs.module.scss
+++ b/src/components/tabs/tabs.module.scss
@@ -14,7 +14,7 @@
     padding: 10px;
     cursor: pointer;
     margin-right: 5px;
-    color: $light-gray;
+    color: $snow-white-40;
 
     &:hover {
         color: $white;
