--- a/src/styles/theme.module.scss
+++ b/src/styles/theme.module.scss
@@ -3,8 +3,12 @@ $white: #ffffff;
 $black: #000000;
 $charcoal-black: #282b2d;
 $snow-white: #f5f5f5;
-$hot-red: #ff2f2f
-$orange-red: #ff5b2b
+$snow-white-40: rgba(245, 245, 245, 0.4);
+$snow-white-10: rgba(245, 245, 245, 0.1);
+$hot-red: #ff2f2f;
+$orange-red: #ff5b2b;
+$orange-red-40: rgba(255,93,43,0.4);
+$orange-red-10: rgba(255, 91, 43, 0.1);
 
 
 //fonts
