--- a/src/_codux/boards/documentation/style-guide.board.module.scss
+++ b/src/_codux/boards/documentation/style-guide.board.module.scss
@@ -168,14 +168,14 @@
     border: 1px solid $orange-red;
 }
 .orange-red-10 {
-    background: rgba(255, 91, 43, 0.1);
+    background: $orange-red-10;
     border: 1px solid $orange-red;
 }
 .snow-white-10 {
     background: $snow-white-10;
 }
 .snow-white-40 {
-    background: rgba(245, 245, 245, 0.4);
+    background: $snow-white-40;
 }
 .box {
     width: 122px;
