--- a/src/_codux/boards/calendar-date/calendar-date.board.module.scss
+++ b/src/_codux/boards/calendar-date/calendar-date.board.module.scss
@@ -1,5 +1,6 @@
 .container {
     display: flex;
     justify-content: center;
-    background-color: black;
+    align-items: center;
+    height: 100vh;
 }
