--- a/src/components/checkout/checkout.module.scss
+++ b/src/components/checkout/checkout.module.scss
@@ -3,16 +3,11 @@
 .root {
     margin: 10px;
 }
-.button {
-    background-color: #131212;
-    color: $snow-white;
-    width: 80%;
-    margin-left: 10%;
-    text-align: center;
-    margin-top: 15px;
-    border-radius: 15px;
-    height: 40px;
-}
+
 .title {
     font-weight: 800;
+}
+
+.checkout-button {
+    margin-top: 20px;
 }
