--- a/src/pages/lesson-page/lesson-page.module.scss
+++ b/src/pages/lesson-page/lesson-page.module.scss
@@ -2,3 +2,12 @@
 
 .root {
 }
+.backButton {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+.lessonTitle {
+    text-transform: capitalize;
+}
