--- a/src/components/calendar/datepickerstyles.css
+++ b/src/components/calendar/datepickerstyles.css
@@ -5,21 +5,23 @@
 
 .react-datepicker__day--selected {
   background-color: transparent;
-  color: black;
 }
+
 .react-datepicker__header {
-  background-color: black;
+  background-color: #282b2d;
   border: none;
 }
+
 .react-datepicker__current-month,
 .react-datepicker__day-name {
-    color: white;
+  color: white;
 }
 
 .react-datepicker__day--outside-month {
   visibility: hidden;
 }
+
 .calendar {
-  background-color: black;
+  background-color: #282b2d;
   border: 0px;
 }
