--- a/src/styles/theme.module.scss
+++ b/src/styles/theme.module.scss
@@ -3,6 +3,7 @@ $white: #ffffff;
 $black: #000000;
 $charcoal-black: #282b2d;
 $snow-white: #f5f5f5;
+$snow-white-50: rgba(245, 245, 245, 0.5);
 $snow-white-40: rgba(245, 245, 245, 0.4);
 $snow-white-10: rgba(245, 245, 245, 0.1);
 $hot-red: #ff2f2f;
