refactor: use `$tablet-width` css var instead of 768px

--- a/src/_codux/boards/intro/intro.module.scss
+++ b/src/_codux/boards/intro/intro.module.scss
@@ -33,7 +33,7 @@
     border-radius: 0 0 20px 20px;
 }
 
-@media (width <= 768px) {
+@media (width <= $tablet-width) {
     .container {
         width: 100vw;
         margin-top: unset;
