--- a/src/components/lesson-item/lesson-item.module.scss
+++ b/src/components/lesson-item/lesson-item.module.scss
@@ -18,7 +18,7 @@
     justify-self: end;
 }
 
-@media (width <= 768px) {
+@media (width <= $tablet-width) {
     .root {
         flex-direction: column;
         grid-auto-flow: column;
