--- a/src/pages/my-bookings-page/my-bookings-page.module.scss
+++ b/src/pages/my-bookings-page/my-bookings-page.module.scss
@@ -53,7 +53,7 @@
     align-items: center;
 }
 
-@media (width <=768px) {
+@media (width <= $tablet-width) {
     .root {
         padding: 16px;
     }
