--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -13,6 +13,7 @@
 .menu {
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 .menuButton {
@@ -25,7 +26,7 @@
     height: fit-content;
 }
 
-@media (width < 455px) {
+@media (width <= $tablet-width) {
     .root {
         display: flex;
         justify-content: center;
