--- a/src/components/lessons-list/lessons-list.module.scss
+++ b/src/components/lessons-list/lessons-list.module.scss
@@ -17,7 +17,7 @@
     justify-content: center;
 }
 
-@media (width <= 768px) {
+@media (width <= $tablet-width) {
     .lesson {
         border: 0;
 
