--- a/src/pages/profile-page/profile-page.module.scss
+++ b/src/pages/profile-page/profile-page.module.scss
@@ -20,7 +20,7 @@
     row-gap: 40px;
     margin-bottom: 20px;
 }
-@media (width <= 768px) {
+@media (width <= $tablet-width) {
     .fields-section {
         flex-direction: column;
         row-gap: 20px;
