refactor: use `$tablet-width` css var instead of 768px (#25)

--- a/src/styles/theme.module.scss
+++ b/src/styles/theme.module.scss
@@ -37,4 +37,5 @@ $extra-small-text: 400 12px/1.45 $my-prettyfont;
 
 //media sizes
 $mobile-width: 430px;
+$tablet-width: 768px;
 $large-desktop: 1400px;
