--- a/src/pages/profile-page/profile-page.module.scss
+++ b/src/pages/profile-page/profile-page.module.scss
@@ -1,3 +1,5 @@
+@import '@styles/theme.module.scss';
+
 .root {
     display: flex;
     flex-grow: 1;
@@ -25,7 +27,7 @@
         flex-direction: column;
         row-gap: 20px;
     }
-}
+} 
 .profile-form {
     display: flex;
     flex-direction: column;
