--- a/src/styles/common-styles.module.scss
+++ b/src/styles/common-styles.module.scss
@@ -78,3 +78,12 @@
     border: 1px solid $white;
     padding: 8px;
 }
+
+
+.chip {
+    padding: 3px 10px;
+    border: 1px solid $snow-white;
+    border-radius: 25px;
+    width: fit-content;
+    font-size: 10px;
+}
