--- a/src/pages/home-page/hero-image/hero-image.module.scss
+++ b/src/pages/home-page/hero-image/hero-image.module.scss
@@ -6,19 +6,11 @@
 }
 
 .overlay {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
-}
-
-.image {
-    object-fit: cover;
-    object-position: 50% 0%;
+    background: url('../../../assets/img/[1400_640]_heroImage.webp') no-repeat center;
+    background-size: cover;
     height: 900px;
     width: 100%;
     border-radius: 16px;
@@ -52,9 +44,24 @@
     }
 }
 
+@media (width <= 1024px) {
+    .overlay {
+        background: url('../../../assets/img/[1024_640]_heroImage.webp') no-repeat center;
+        height: 600px;
+    }
+}
+
+@media (width <= $tablet-width) {
+    .overlay {
+        background: url('../../../assets/img/[760_460]_heroImage.webp') no-repeat center;
+        height: 500px;
+    }
+}
+
 @media (width <= $mobile-width) {
     .overlay {
-        padding-left: 8vw;
+        background: url('../../../assets/img/[430_340]_heroImage.webp') no-repeat center;
+        height: 300px;
     }
 
     .small-title {
