added timezone and back button

--- a/src/pages/lesson-page/lesson-page.module.scss
+++ b/src/pages/lesson-page/lesson-page.module.scss
@@ -22,3 +22,8 @@
     background-clip: border-box;
     height: 1px;
 }
+.aboveTheLine {
+    display: flex;
+    align-content: space-between;
+    justify-content: space-between;
+}
