--- a/src/pages/lesson-page/lesson-page.module.scss
+++ b/src/pages/lesson-page/lesson-page.module.scss
@@ -1,13 +1,37 @@
-@import '@styles/theme.module.scss';
 
-.root {
+.secondTitle {
+    font: $small-text-font-bold;
+}
+.horizontalLine {
+    width: 70%;
+    color: $snow-white-40;
+    background-color: $snow-white-40;
+    background-image: none;
+    background-position: 0%;
+    background-size: auto;
+    background-repeat: repeat;
+    background-attachment: scroll;
+    background-origin: padding-box;
+    background-clip: border-box;
+    height: 10px;
+}
+.aboveTheLine {
+    display: flex;
+    align-content: space-between;
+    justify-content: space-between;
 }
 .backButton {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    padding: 0px;
+    border-radius: 0;
 }
 .lessonTitle {
     text-transform: capitalize;
+    font: $large-title;
+}
+.lessonDescription {
+    font: $small-text;
 }
