--- a/src/pages/lesson-page/lesson-page.module.scss
+++ b/src/pages/lesson-page/lesson-page.module.scss
@@ -59,3 +59,7 @@
     padding-top: 1em;
     padding-bottom: 2em;
 }
+.selectedHour{
+    background-color: rgba(255, 91, 43, 0.1);
+    border: 1px solid $orange-red;
+}
